--- a/index.html
+++ b/index.html
@@ -1,9 +1,1 @@
-<!doctype html>
-<html>
-  <head></head>
-    <body>
-<<<<<<< HEAD
-<h1>Hello World!</h1>
-=======
-<h1>Hello World!</h1>
->>>>>>> 2319e9360cab685897421829131744eddc897ae2
+<h1>Hello, World!</h1>
